src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
	scroll-behavior: smooth;
}

body {
	@apply bg-white dark:bg-base dark:text-text text-black duration-100;
}

h2 {
	@apply text-[1.5rem] font-semibold;
}

:focus {
	@apply outline-2 outline-blue-500;
}

a {
	@apply font-medium text-sm;
}

.swiper {
	width: 100%;
	height: 100%;
	@apply py-8 !important;
}

.swiper-slide {
	background: #fff;
	display: flex;
	justify-content: center;
	align-items: center;

	@apply text-black rounded-lg;
}

.swiper-pagination-bullet {
	@apply dark:bg-white !important;
}

.swiper-pagination-bullet-active {
	@apply bg-black dark:bg-primary !important;
}

.form-control {
	@apply flex flex-col;
}

.form-control label {
	@apply font-medium dark:text-white after:content-['*'] after:ml-0.5 after:text-red-500;
}

.form-control input,
.form-control textarea {
	@apply p-3 rounded-lg border-2 border-gray-300 dark:border-primary focus:outline-primary dark:focus:outline-red-600 dark:text-black dark:bg-white mt-1;
}

.error-msg {
	@apply text-red-500 text-sm mt-1 font-medium;
}

